--- a/tarea4/ListaProductos.html
+++ b/tarea4/ListaProductos.html
@@ -33,7 +33,7 @@
                         <div class="control"id="divselectCategoria">
                             <div class="select  is-success " id="selectcategoria2" >
                                 <select  class="categoria" id="selectcategoria">
-                                   <option value="">Todos</option>
+                                   <option value="">TODOS</option>
                                 </select>
                                 
                             </div>
